--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>StudyMate</h2>
+  <div style="display:flex;justify-content:space-between;align-items:center;">
+    <h2 style="margin:0;">StudyMate</h2>
+    <div style="display:flex;gap:6px;">
+      <select id="popup-theme" style="border-radius:4px;">
+        <option value="light">Sáng</option>
+        <option value="dark">Tối</option>
+        <option value="blue">Xanh</option>
+        <option value="pink">Hồng</option>
+      </select>
+      <select id="popup-font" style="border-radius:4px;">
+        <option value="sans-serif">Sans</option>
+        <option value="serif">Serif</option>
+        <option value="monospace">Mono</option>
+      </select>
+      <input id="popup-border" type="color" value="#bbbbbb" title="Màu viền" style="width:28px;height:28px;padding:0;border:none;background:none;">
+    </div>
+  </div>
   <button id="saveWordBtn">📌 Lưu từ đã chọn</button>
   <textarea id="note" placeholder="Viết ghi chú..." style="width:100%;height:60px;margin-top:8px;border-radius:4px;"></textarea>
   <div id="notes-list" style="max-height:100px;overflow:auto;margin:8px 0 0 0;"></div>
