--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,12 @@
   </div>
   <button id="saveWordBtn">📌 Lưu từ đã chọn</button>
   <textarea id="note" placeholder="Viết ghi chú..." style="width:100%;height:60px;margin-top:8px;border-radius:4px;"></textarea>
+  <input id="popup-remind" type="number" min="0" placeholder="Nhắc sau (phút)" style="width:120px;margin:4px 0 0 0;border-radius:4px;border:1px solid #ccc;padding:3px 6px;font-size:13px;">
+  <div style="display:flex;gap:6px;margin:8px 0;">
+    <input id="popup-search" type="text" placeholder="Tìm ghi chú..." style="flex:1;border-radius:4px;border:1px solid #ccc;padding:3px 8px;font-size:13px;">
+    <button id="popup-show-pin" style="border-radius:4px;border:1px solid #888;background:#ffe066;cursor:pointer;padding:3px 8px;">Chỉ ghim</button>
+    <button id="popup-export" style="border-radius:4px;border:1px solid #888;background:#ffe066;cursor:pointer;padding:3px 8px;">Xuất TXT</button>
+  </div>
   <div id="notes-list" style="max-height:100px;overflow:auto;margin:8px 0 0 0;"></div>
   <div style="margin-top:8px;">
     <button id="saveNote">💾 Lưu ghi chú</button>
